Lab2-decodificador-8QAM.cydsn/REBUILD.log
--------------- Rebuild Started: 04/06/2025 13:06:56 Project: main.c, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:22:3: warning: implicit declaration of function 'ADC_1_Start' [-Wimplicit-function-declaration]
   ADC_1_Start();
   ^
main.c:23:3: warning: implicit declaration of function 'ADC_2_Start' [-Wimplicit-function-declaration]
   ADC_2_Start();
   ^
main.c:24:3: warning: implicit declaration of function 'ADC_1_StartConvert' [-Wimplicit-function-declaration]
   ADC_1_StartConvert();
   ^
main.c:25:3: warning: implicit declaration of function 'ADC_2_StartConvert' [-Wimplicit-function-declaration]
   ADC_2_StartConvert();
   ^
main.c:26:3: warning: implicit declaration of function 'ADC_IsEndConversion' [-Wimplicit-function-declaration]
   ADC_IsEndConversion(ADC_1_WAIT_FOR_RESULT);
   ^
main.c:26:23: error: 'ADC_1_WAIT_FOR_RESULT' undeclared (first use in this function)
   ADC_IsEndConversion(ADC_1_WAIT_FOR_RESULT);
                       ^
main.c:26:23: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 04/06/2025 13:06:56 ---------------
